--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	</parent>
 	<groupId>com.healthcheck</groupId>
 	<artifactId>healthcheckapplication</artifactId>
+	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>healthcheckapplication</name>
 	<description>Demo project for Spring Boot</description>
